src/test/c/reject/31-nested-loops-missing-brace.arcx
while (a == b) {
    for(i in list) {
        while (x < 10) {
            a:int = 1;
        
    }
} 